--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,11 +23,12 @@
 body {
     width: 100%;
     height: 100vh;
+    min-width: 1200px;
     margin: 0;
     user-select: none;
     color: #333;
     background: #fff;
-    font-family: hannotate;
+    font-family: hannotate, sans-serif;
 }
 
 /*.tile-btn {*/
